test/specs/scope.js


let sadg
test (`test`, () => {
  sadg = 'sagsda';
})


test (`test`, () => {
  sadg // error
})